# mcp-airq-cloud

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  server.json
.claude/: settings.json
.github/workflows/: publish.yml  tests.yml
src/mcp_airq_cloud/: __init__.py  cli.py  cloud_device.py  config.py  devices.py  errors.py  guides.py  prompts.py  server.py
src/mcp_airq_cloud/tools/: read.py
tests/: conftest.py  test_cli.py  test_cloud_device.py  test_config.py  test_device_manager.py  test_errors.py  test_init.py  test_read_tools.py  test_server.py
